--- a/data_theorem_analyzer_config.yaml
+++ b/data_theorem_analyzer_config.yaml
@@ -1,3 +1,3 @@
 build_commands:
- - echo “Building codebase (in pull request branch)...”
+ - echo “Building codebase...”
  - ./InsecureBankv2/gradlew assembleDebug --stacktrace
