--- a/data_theorem_analyzer_config.yaml
+++ b/data_theorem_analyzer_config.yaml
@@ -1,4 +1,3 @@
 build_commands:
- - echo “Building codebase...”
- - cd "InsecureBankv2"
+ - echo “Building codebase....”
  - ./gradlew assembleDebug --stacktrace
